// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Helper: addFilesToIncludes > parse tsconfig.json that has a comment /**/ block 1`] = `
"{
  \\"include\\": []
}
"
`;

exports[`Task: analyze > accept --package option to skip the selection 1`] = `
[
  "foo.js",
  "depends-on-foo.js",
  "index.js",
]
`;

exports[`Task: analyze > accept --package option to skip the selection 2`] = `
"[STARTED] Analyze project

[DATA] Running migration on package .
[SUCCESS] Analyze project
"
`;

exports[`Task: analyze > add files in tsconfig.json include 1`] = `
{
  "include": [
    "foo.ts",
    "depends-on-foo.ts",
    "index.ts",
  ],
}
`;

exports[`Task: analyze > get files that will be migrated 1`] = `
[
  "foo.js",
  "depends-on-foo.js",
  "index.js",
]
`;

exports[`Task: analyze > get files that will be migrated 2`] = `
"[STARTED] Analyze project

[DATA] Running migration on basic
[SUCCESS] Analyze project
"
`;

exports[`Task: analyze > multi-package > disable package selection if completed 1`] = `
{
  ".": [],
  "./module-a": [
    "./module-a/index.js",
  ],
  "./module-b": [],
}
`;

exports[`Task: analyze > multi-package > disable package selection if completed 2`] = `
{
  "./module-a/index.js": {
    "current": "./module-a/index.ts",
    "errorCount": 0,
    "origin": "./module-a/index.js",
    "package": "./module-a",
  },
}
`;

exports[`Task: analyze > multi-package > show package progress in interactive mode 1`] = `
{
  ".": [],
  "./module-a": [
    "./module-a/index.js",
  ],
  "./module-b": [],
}
`;

exports[`Task: analyze > multi-package > show package progress in interactive mode 2`] = `
{
  "./module-a/index.js": {
    "current": "./module-a/index.ts",
    "errorCount": 2,
    "origin": "./module-a/index.js",
    "package": "./module-a",
  },
}
`;

exports[`Task: analyze > print files will be attempted to migrate with --dryRun 1`] = `
"[STARTED] Analyze project

[DATA] Running migration on basic
[DATA] List of files will be attempted to migrate:
[DATA]  foo.js
[DATA] depends-on-foo.js
[DATA] index.js
[SUCCESS] Analyze project
"
`;
